--- a/report/junit/alltests-fails.html
+++ b/report/junit/alltests-fails.html
@@ -17,6 +17,34 @@
             <tr valign="top">
                 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
             </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_StateChangingSizeThrows"></a><a href="/0_BarricadeTest.html#testCorrectSize_StateChangingSizeThrows">testCorrectSize_StateChangingSizeThrows</a></td><td>Failure</td><td>Expected exception: java.lang.RuntimeException
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: Expected exception: java.lang.RuntimeException
+                        <br>
+                    </code></td><td>0.017</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_WrongSizeLogged"></a><a href="/0_BarricadeTest.html#testCorrectSize_WrongSizeLogged">testCorrectSize_WrongSizeLogged</a></td><td>Failure</td><td>expected:&lt;2&gt; but was:&lt;999&gt;
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: expected:&lt;2&gt; but was:&lt;999&gt;
+                        <br>
+                        	at BarricadeTest.testCorrectSize_WrongSizeLogged(BarricadeTest.java:87)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.002</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectStringRepresentation_StateChange"></a><a href="/0_BarricadeTest.html#testCorrectStringRepresentation_StateChange">testCorrectStringRepresentation_StateChange</a></td><td>Failure</td><td>Expected exception: java.lang.RuntimeException
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: Expected exception: java.lang.RuntimeException
+                        <br>
+                    </code></td><td>0.000</td>
+            </tr>
         </table>
     </body>
 </html>
