--- a/report/jacoco/default/MatrixMap.java.html
+++ b/report/jacoco/default/MatrixMap.java.html
@@ -4,20 +4,20 @@ import java.util.function.Function;
 public final class MatrixMap&lt;T&gt; {
 
     public static class InvalidLengthException extends Exception {
-<span class="nc" id="L7">        public enum Cause { ROW, COLUMN }</span>
+<span class="fc" id="L7">        public enum Cause { ROW, COLUMN }</span>
         private final Cause cause;
         private final int length;
-<span class="nc" id="L10">        public InvalidLengthException(Cause cause, int length) {</span>
-<span class="nc" id="L11">            this.cause = cause;</span>
-<span class="nc" id="L12">            this.length = length;</span>
-<span class="nc" id="L13">        }</span>
-<span class="nc" id="L14">        public Cause getTheCause() { return cause; }</span>
-<span class="nc" id="L15">        public int getTheLength() { return length; }</span>
+<span class="fc" id="L10">        public InvalidLengthException(Cause cause, int length) {</span>
+<span class="fc" id="L11">            this.cause = cause;</span>
+<span class="fc" id="L12">            this.length = length;</span>
+<span class="fc" id="L13">        }</span>
+<span class="fc" id="L14">        public Cause getTheCause() { return cause; }</span>
+<span class="fc" id="L15">        public int getTheLength() { return length; }</span>
         public static int requireNonEmpty(Cause cause, int length) {
-<span class="nc bnc" id="L17" title="All 2 branches missed.">            if (length &lt;= 0) {</span>
-<span class="nc" id="L18">                throw new IllegalArgumentException(new InvalidLengthException(cause, length));</span>
+<span class="fc bfc" id="L17" title="All 2 branches covered.">            if (length &lt;= 0) {</span>
+<span class="fc" id="L18">                throw new IllegalArgumentException(new InvalidLengthException(cause, length));</span>
             }
-<span class="nc" id="L20">            return length;</span>
+<span class="fc" id="L20">            return length;</span>
         }
     }
 
@@ -26,44 +26,44 @@ public final class MatrixMap&lt;T&gt; {
      */
     private final RoamingMap&lt;Indexes, T&gt; matrix;
 
-<span class="nc" id="L29">    private MatrixMap(RoamingMap&lt;Indexes, T&gt; matrix) {</span>
-<span class="nc" id="L30">        this.matrix = matrix;</span>
-<span class="nc" id="L31">    }</span>
+<span class="fc" id="L29">    private MatrixMap(RoamingMap&lt;Indexes, T&gt; matrix) {</span>
+<span class="fc" id="L30">        this.matrix = matrix;</span>
+<span class="fc" id="L31">    }</span>
 
     /** 
      * Returns a MatrixMap with given rows and columns, using valueMapper to generate values.
      */
     public static &lt;S&gt; MatrixMap&lt;S&gt; instance(int rows, int columns, Function&lt;Indexes, S&gt; valueMapper) {
-<span class="nc" id="L37">        Objects.requireNonNull(valueMapper);</span>
-<span class="nc" id="L38">        RoamingMap&lt;Indexes, S&gt; matrix = buildMatrix(rows, columns, valueMapper);</span>
-<span class="nc" id="L39">        return new MatrixMap&lt;&gt;(matrix);</span>
+<span class="fc" id="L37">        Objects.requireNonNull(valueMapper);</span>
+<span class="fc" id="L38">        RoamingMap&lt;Indexes, S&gt; matrix = buildMatrix(rows, columns, valueMapper);</span>
+<span class="fc" id="L39">        return new MatrixMap&lt;&gt;(matrix);</span>
     }
 
     /**
      * Returns a MatrixMap with size specified by the given Indexes (row count and column count).
      */
     public static &lt;S&gt; MatrixMap&lt;S&gt; instance(Indexes size, Function&lt;Indexes, S&gt; valueMapper) {
-<span class="nc" id="L46">        Objects.requireNonNull(size);</span>
-<span class="nc" id="L47">        Objects.requireNonNull(valueMapper);</span>
-<span class="nc" id="L48">        RoamingMap&lt;Indexes, S&gt; matrix = buildMatrix(size.row(), size.column(), valueMapper);</span>
-<span class="nc" id="L49">        return new MatrixMap&lt;&gt;(matrix);</span>
+<span class="fc" id="L46">        Objects.requireNonNull(size);</span>
+<span class="fc" id="L47">        Objects.requireNonNull(valueMapper);</span>
+<span class="fc" id="L48">        RoamingMap&lt;Indexes, S&gt; matrix = buildMatrix(size.row(), size.column(), valueMapper);</span>
+<span class="fc" id="L49">        return new MatrixMap&lt;&gt;(matrix);</span>
     }
 
     /**
      * Returns an N x N MatrixMap with all entries equal to the given value.
      */
     public static &lt;S&gt; MatrixMap&lt;S&gt; constant(int size, S value) {
-<span class="nc" id="L56">        Objects.requireNonNull(value);</span>
-<span class="nc" id="L57">        return instance(size, size, indexes -&gt; value);</span>
+<span class="fc" id="L56">        Objects.requireNonNull(value);</span>
+<span class="fc" id="L57">        return instance(size, size, indexes -&gt; value);</span>
     }
 
     /**
      * Returns an N x N identity MatrixMap: identity value on diagonal, zero value elsewhere.
      */
     public static &lt;S&gt; MatrixMap&lt;S&gt; identity(int size, S zero, S identity) {
-<span class="nc" id="L64">        Objects.requireNonNull(zero);</span>
-<span class="nc" id="L65">        Objects.requireNonNull(identity);</span>
-<span class="nc bnc" id="L66" title="All 2 branches missed.">        return instance(size, size, indexes -&gt; (indexes.areDiagonal() ? identity : zero));</span>
+<span class="fc" id="L64">        Objects.requireNonNull(zero);</span>
+<span class="fc" id="L65">        Objects.requireNonNull(identity);</span>
+<span class="fc bfc" id="L66" title="All 2 branches covered.">        return instance(size, size, indexes -&gt; (indexes.areDiagonal() ? identity : zero));</span>
     }
 
     /**
@@ -71,27 +71,27 @@ public final class MatrixMap&lt;T&gt; {
      * The resulting MatrixMap has size [matrix.length x matrix[0].length] with corresponding values.
      */
     public static &lt;S&gt; MatrixMap&lt;S&gt; from(S[][] matrix) {
-<span class="nc" id="L74">        Objects.requireNonNull(matrix);</span>
-<span class="nc" id="L75">        int rows = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.ROW, matrix.length);</span>
-<span class="nc" id="L76">        int columns = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.COLUMN, matrix[0].length);</span>
-<span class="nc" id="L77">        RoamingMap&lt;Indexes, S&gt; mapData = buildMatrix(rows, columns, indexes -&gt; indexes.value(matrix));</span>
-<span class="nc" id="L78">        return new MatrixMap&lt;&gt;(mapData);</span>
+<span class="fc" id="L74">        Objects.requireNonNull(matrix);</span>
+<span class="fc" id="L75">        int rows = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.ROW, matrix.length);</span>
+<span class="fc" id="L76">        int columns = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.COLUMN, matrix[0].length);</span>
+<span class="fc" id="L77">        RoamingMap&lt;Indexes, S&gt; mapData = buildMatrix(rows, columns, indexes -&gt; indexes.value(matrix));</span>
+<span class="fc" id="L78">        return new MatrixMap&lt;&gt;(mapData);</span>
     }
 
     /**
      * @return Indexes with row = number of rows, column = number of columns in this matrix
      */
     public Indexes size() {
-<span class="nc" id="L85">        Iterator&lt;Indexes&gt; iterator = Barricade.correctKeySet(matrix).iterator();</span>
+<span class="fc" id="L85">        Iterator&lt;Indexes&gt; iterator = Barricade.correctKeySet(matrix).iterator();</span>
         // Find the maximum index (largest row and column)
-<span class="nc bnc" id="L87" title="All 2 branches missed.">        Indexes maxIndex = iterator.hasNext() ? iterator.next() : Indexes.ORIGIN;</span>
-<span class="nc bnc" id="L88" title="All 2 branches missed.">        while (iterator.hasNext()) {</span>
-<span class="nc" id="L89">            Indexes current = iterator.next();</span>
-<span class="nc bnc" id="L90" title="All 2 branches missed.">            if (current.compareTo(maxIndex) &gt; 0) {</span>
-<span class="nc" id="L91">                maxIndex = current;</span>
+<span class="pc bpc" id="L87" title="1 of 2 branches missed.">        Indexes maxIndex = iterator.hasNext() ? iterator.next() : Indexes.ORIGIN;</span>
+<span class="fc bfc" id="L88" title="All 2 branches covered.">        while (iterator.hasNext()) {</span>
+<span class="fc" id="L89">            Indexes current = iterator.next();</span>
+<span class="pc bpc" id="L90" title="1 of 2 branches missed.">            if (current.compareTo(maxIndex) &gt; 0) {</span>
+<span class="fc" id="L91">                maxIndex = current;</span>
             }
-<span class="nc" id="L93">        }</span>
-<span class="nc" id="L94">        return new Indexes(maxIndex.row() + 1, maxIndex.column() + 1);</span>
+<span class="fc" id="L93">        }</span>
+<span class="fc" id="L94">        return new Indexes(maxIndex.row() + 1, maxIndex.column() + 1);</span>
     }
 
     /**
@@ -99,7 +99,7 @@ public final class MatrixMap&lt;T&gt; {
      */
     @Override
     public String toString() {
-<span class="nc" id="L102">        return Barricade.correctStringRepresentation(matrix);</span>
+<span class="fc" id="L102">        return Barricade.correctStringRepresentation(matrix);</span>
     }
 
     /**
@@ -108,30 +108,30 @@ public final class MatrixMap&lt;T&gt; {
      * @return the value at that position in the matrix
      */
     public T value(Indexes indexes) {
-<span class="nc" id="L111">        Objects.requireNonNull(indexes);</span>
-<span class="nc" id="L112">        return Barricade.getWithStateVar(matrix, indexes).value();</span>
+<span class="fc" id="L111">        Objects.requireNonNull(indexes);</span>
+<span class="fc" id="L112">        return Barricade.getWithStateVar(matrix, indexes).value();</span>
     }
 
     /**
      * Convenience method to retrieve the value at (row, column).
      */
     public T value(int row, int column) {
-<span class="nc" id="L119">        return value(new Indexes(row, column));</span>
+<span class="fc" id="L119">        return value(new Indexes(row, column));</span>
     }
 
     /**
      * Builds the internal matrix (RoamingMap from Indexes to S) of given dimensions using valueMapper.
      */
     private static &lt;S&gt; RoamingMap&lt;Indexes, S&gt; buildMatrix(int rows, int columns, Function&lt;Indexes, S&gt; valueMapper) {
-<span class="nc" id="L126">        int rowsNumber = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.ROW, rows);</span>
-<span class="nc" id="L127">        int columnsNumber = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.COLUMN, columns);</span>
-<span class="nc" id="L128">        RoamingMap&lt;Indexes, S&gt; matrix = new RoamingMap&lt;&gt;();</span>
+<span class="fc" id="L126">        int rowsNumber = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.ROW, rows);</span>
+<span class="fc" id="L127">        int columnsNumber = InvalidLengthException.requireNonEmpty(InvalidLengthException.Cause.COLUMN, columns);</span>
+<span class="fc" id="L128">        RoamingMap&lt;Indexes, S&gt; matrix = new RoamingMap&lt;&gt;();</span>
         // Populate all indices from (0,0) to (rowsNumber-1, columnsNumber-1)
-<span class="nc" id="L130">        Indexes.stream(rowsNumber - 1, columnsNumber - 1).forEach(indexes -&gt; {</span>
-<span class="nc" id="L131">            S value = valueMapper.apply(indexes);</span>
-<span class="nc" id="L132">            Barricade.putWithStateVar(matrix, indexes, value);</span>
-<span class="nc" id="L133">        });</span>
-<span class="nc" id="L134">        return matrix;</span>
+<span class="fc" id="L130">        Indexes.stream(rowsNumber - 1, columnsNumber - 1).forEach(indexes -&gt; {</span>
+<span class="fc" id="L131">            S value = valueMapper.apply(indexes);</span>
+<span class="fc" id="L132">            Barricade.putWithStateVar(matrix, indexes, value);</span>
+<span class="fc" id="L133">        });</span>
+<span class="fc" id="L134">        return matrix;</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.12.202403310830</span></div></body></html>
