--- a/report/junit/1_MatrixMapTest-out.html
+++ b/report/junit/1_MatrixMapTest-out.html
@@ -4,7 +4,8 @@
         <title>Standard Output from MatrixMapTest</title>
     </head>
     <body>
-        <pre>BARRICADE CLASS LOADED
+        <pre>MATRIXMAP CLASS LOADED
+BARRICADE CLASS LOADED
 </pre>
     </body>
 </html>
