--- a/report/junit/alltests-errors.html
+++ b/report/junit/alltests-errors.html
@@ -17,6 +17,18 @@
             <tr valign="top">
                 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
             </tr>
+            <tr valign="top" class="Error">
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testPutWithStateVar_StateChange"></a><a href="/0_BarricadeTest.html#testPutWithStateVar_StateChange">testPutWithStateVar_StateChange</a></td><td>Error</td><td>Cannot invoke "String.contains(java.lang.CharSequence)" because the return value of "java.lang.RuntimeException.getMessage()" is null
+                    <br>
+                    <br>
+                    <code>java.lang.NullPointerException: Cannot invoke "String.contains(java.lang.CharSequence)" because the return value of "java.lang.RuntimeException.getMessage()" is null
+                        <br>
+                        	at BarricadeTest.testPutWithStateVar_StateChange(BarricadeTest.java:279)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.007</td>
+            </tr>
         </table>
     </body>
 </html>
