--- a/report/jacoco/default/MatrixMap.java.html
+++ b/report/jacoco/default/MatrixMap.java.html
@@ -99,7 +99,7 @@ public final class MatrixMap&lt;T&gt; {
      */
     @Override
     public String toString() {
-<span class="fc" id="L102">        return Barricade.correctStringRepresentation(matrix);</span>
+<span class="nc" id="L102">        return Barricade.correctStringRepresentation(matrix);</span>
     }
 
     /**
@@ -133,5 +133,8 @@ public final class MatrixMap&lt;T&gt; {
 <span class="fc" id="L133">        });</span>
 <span class="fc" id="L134">        return matrix;</span>
     }
+    static {
+<span class="fc" id="L137">        System.out.println(&quot;MATRIXMAP CLASS LOADED&quot;);</span>
+<span class="fc" id="L138">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.12.202403310830</span></div></body></html>
