--- a/report/junit/alltests-fails.html
+++ b/report/junit/alltests-fails.html
@@ -18,30 +18,74 @@
                 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
             </tr>
             <tr valign="top" class="Failure">
-                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_StateChangingSizeThrows"></a><a href="/0_BarricadeTest.html#testCorrectSize_StateChangingSizeThrows">testCorrectSize_StateChangingSizeThrows</a></td><td>Failure</td><td>Expected exception: java.lang.RuntimeException
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectStringRepresentation_OperatedIncorrectly"></a><a href="/0_BarricadeTest.html#testCorrectStringRepresentation_OperatedIncorrectly">testCorrectStringRepresentation_OperatedIncorrectly</a></td><td>Failure</td><td>Expected runtime exception for changed entry set in toString
                     <br>
                     <br>
-                    <code>junit.framework.AssertionFailedError: Expected exception: java.lang.RuntimeException
+                    <code>junit.framework.AssertionFailedError: Expected runtime exception for changed entry set in toString
                         <br>
-                    </code></td><td>0.017</td>
-            </tr>
-            <tr valign="top" class="Failure">
-                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_WrongSizeLogged"></a><a href="/0_BarricadeTest.html#testCorrectSize_WrongSizeLogged">testCorrectSize_WrongSizeLogged</a></td><td>Failure</td><td>expected:&lt;2&gt; but was:&lt;999&gt;
-                    <br>
-                    <br>
-                    <code>junit.framework.AssertionFailedError: expected:&lt;2&gt; but was:&lt;999&gt;
-                        <br>
-                        	at BarricadeTest.testCorrectSize_WrongSizeLogged(BarricadeTest.java:87)
+                        	at BarricadeTest.testCorrectStringRepresentation_OperatedIncorrectly(BarricadeTest.java:164)
                         <br>
                         	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
                         <br>
                     </code></td><td>0.002</td>
             </tr>
             <tr valign="top" class="Failure">
-                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectStringRepresentation_StateChange"></a><a href="/0_BarricadeTest.html#testCorrectStringRepresentation_StateChange">testCorrectStringRepresentation_StateChange</a></td><td>Failure</td><td>Expected exception: java.lang.RuntimeException
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_OperatedIncorrectly"></a><a href="/0_BarricadeTest.html#testCorrectSize_OperatedIncorrectly">testCorrectSize_OperatedIncorrectly</a></td><td>Failure</td><td>Expected runtime exception for changed entrySet
                     <br>
                     <br>
-                    <code>junit.framework.AssertionFailedError: Expected exception: java.lang.RuntimeException
+                    <code>junit.framework.AssertionFailedError: Expected runtime exception for changed entrySet
+                        <br>
+                        	at BarricadeTest.testCorrectSize_OperatedIncorrectly(BarricadeTest.java:92)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.001</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/0_BarricadeTest.html">BarricadeTest</a></td><td><a name="testCorrectSize_WrongValue"></a><a href="/0_BarricadeTest.html#testCorrectSize_WrongValue">testCorrectSize_WrongValue</a></td><td>Failure</td><td>expected:&lt;1&gt; but was:&lt;999&gt;
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: expected:&lt;1&gt; but was:&lt;999&gt;
+                        <br>
+                        	at BarricadeTest.testCorrectSize_WrongValue(BarricadeTest.java:114)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.001</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/1_MatrixMapTest.html">MatrixMapTest</a></td><td><a name="testInstanceIndexesHappyPath"></a><a href="/1_MatrixMapTest.html#testInstanceIndexesHappyPath">testInstanceIndexesHappyPath</a></td><td>Failure</td><td>expected:&lt;[(0,1)]&gt; but was:&lt;[Indexes[row=0, column=1]]&gt;
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: expected:&lt;[(0,1)]&gt; but was:&lt;[Indexes[row=0, column=1]]&gt;
+                        <br>
+                        	at MatrixMapTest.testInstanceIndexesHappyPath(MatrixMapTest.java:31)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.030</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/1_MatrixMapTest.html">MatrixMapTest</a></td><td><a name="testSize_EmptyMapCase"></a><a href="/1_MatrixMapTest.html#testSize_EmptyMapCase">testSize_EmptyMapCase</a></td><td>Failure</td><td>expected:&lt;0&gt; but was:&lt;1&gt;
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: expected:&lt;0&gt; but was:&lt;1&gt;
+                        <br>
+                        	at MatrixMapTest.testSize_EmptyMapCase(MatrixMapTest.java:81)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+                        <br>
+                    </code></td><td>0.001</td>
+            </tr>
+            <tr valign="top" class="Failure">
+                <td><a href="/1_MatrixMapTest.html">MatrixMapTest</a></td><td><a name="testSize_EmptyMatrix"></a><a href="/1_MatrixMapTest.html#testSize_EmptyMatrix">testSize_EmptyMatrix</a></td><td>Failure</td><td>expected:&lt;0&gt; but was:&lt;1&gt;
+                    <br>
+                    <br>
+                    <code>junit.framework.AssertionFailedError: expected:&lt;0&gt; but was:&lt;1&gt;
+                        <br>
+                        	at MatrixMapTest.testSize_EmptyMatrix(MatrixMapTest.java:120)
+                        <br>
+                        	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
                         <br>
                     </code></td><td>0.000</td>
             </tr>
